--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -21,6 +21,8 @@
   margin: 0 auto;
   align-items: center;
   padding: 60px 0;
+  margin-top: -20px;
+  padding-bottom: 120px;
 }
 
 .marquee-content {
@@ -51,8 +53,8 @@
 }
 
 .skill-item svg {
-  width: 90px;
-  height: 90px;
+  width: 100px;
+  height: 100px;
   margin-bottom: 10px;
 }
 
